Neyer/NetBeans/exoBootOnKubernetes/target/classes/META-INF/fabric8/openshift/exobootonkubernetes-service.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/exoBootOnKubernetes
    fabric8.io/scm-tag: HEAD
    prometheus.io/port: "9779"
    prometheus.io/scrape: "true"
  labels:
    expose: "true"
    app: exoBootOnKubernetes
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: com.example
  name: exobootonkubernetes
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: exoBootOnKubernetes
    provider: fabric8
    group: com.example
